# medgemma-impact-challenge

./: .pre-commit-config.yaml  README.md  WRITEUP.md  app.py  eval_app.py  pyproject.toml
.github/workflows/: lint.yml
data/: patients.json  trials.json
data/guidelines/: README.md
data/logs/: run_p1_medgemma-1.5-4b-it_20260218_215413_feedback.txt  run_p1_medgemma-27b-it_20260218_221214_feedback.txt  run_p2_medgemma-1.5-4b-it_20260218_215659_feedback.txt  run_p2_medgemma-27b-it_20260218_221753_feedback.txt  run_p3_medgemma-1.5-4b-it_20260218_215822_feedback.txt  run_p3_medgemma-27b-it_20260218_222204_feedback.txt
data/prompts/: 00_CT_IMAGE_ANALYZER.md  01_PATIENT_DATA_ANALYZER.md  02_GUIDELINE_MATCHER.md  03_TRIAL_MATCHER.md  04_RECOMMENDER.md  05_VALIDATOR.md
src/medgemma_impact_challenge/: __init__.py  agents.py  app.py  callbacks.py  config.py  eval_app.py  run.py  schemas.py  utils.py
